--- a/Components/Account/Pages/Manage/Email.razor
+++ b/Components/Account/Pages/Manage/Email.razor
@@ -19,7 +19,8 @@
 <StatusMessage Message="@message"/>
 <div class="row">
     <div class="col-md-6">
-        <form @onsubmit="OnSendEmailVerificationAsync" @formname="send-verification" id="send-verification-form" method="post">
+        <form @onsubmit="OnSendEmailVerificationAsync" @formname="send-verification" id="send-verification-form"
+              method="post">
             <AntiforgeryToken/>
         </form>
         <EditForm Model="Input" FormName="change-email" OnValidSubmit="OnValidSubmitAsync" method="post">
@@ -28,7 +29,8 @@
             @if (isEmailConfirmed)
             {
                 <div class="form-floating mb-3 input-group">
-                    <input type="text" value="@email" class="form-control" placeholder="Please enter your email." disabled/>
+                    <input type="text" value="@email" class="form-control" placeholder="Please enter your email."
+                           disabled/>
                     <div class="input-group-append">
                         <span class="h-100 input-group-text text-success font-weight-bold">✓</span>
                     </div>
@@ -38,13 +40,16 @@
             else
             {
                 <div class="form-floating mb-3">
-                    <input type="text" value="@email" class="form-control" placeholder="Please enter your email." disabled/>
+                    <input type="text" value="@email" class="form-control" placeholder="Please enter your email."
+                           disabled/>
                     <label for="email" class="form-label">Email</label>
-                    <button type="submit" class="btn btn-link" form="send-verification-form">Send verification email</button>
+                    <button type="submit" class="btn btn-link" form="send-verification-form">Send verification email
+                    </button>
                 </div>
             }
             <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Please enter new email."/>
+                <InputText @bind-Value="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true"
+                           placeholder="Please enter new email."/>
                 <label for="new-email" class="form-label">New email</label>
                 <ValidationMessage For="() => Input.NewEmail" class="text-danger"/>
             </div>
