--- a/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -25,12 +25,15 @@
                 <td>
                     @if (showRemoveButton)
                     {
-                        <form @formname="@($"remove-login-{login.LoginProvider}")" @onsubmit="OnSubmitAsync" method="post">
+                        <form @formname="@($"remove-login-{login.LoginProvider}")" @onsubmit="OnSubmitAsync"
+                              method="post">
                             <AntiforgeryToken/>
                             <div>
                                 <input type="hidden" name="@nameof(LoginProvider)" value="@login.LoginProvider"/>
                                 <input type="hidden" name="@nameof(ProviderKey)" value="@login.ProviderKey"/>
-                                <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                <button type="submit" class="btn btn-primary"
+                                        title="Remove this @login.ProviderDisplayName login from your account">Remove
+                                </button>
                             </div>
                         </form>
                     }
@@ -54,7 +57,8 @@
             <p>
                 @foreach (var provider in otherLogins)
                 {
-                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name"
+                            title="Log in using your @provider.DisplayName account">
                         @provider.DisplayName
                     </button>
                 }
