--- a/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -26,8 +26,10 @@ else
             If you lose your device and don't have the recovery codes you will lose access to your account.
         </p>
         <p>
-            Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+            Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the
+            key
+            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator
+                keys.</a>
         </p>
     </div>
     <div>
