--- a/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -21,7 +21,8 @@
         {
             <div class="alert alert-danger">
                 <strong>You have no recovery codes left.</strong>
-                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>
+                    before you can log in with a recovery code.</p>
             </div>
         }
         else if (recoveryCodesLeft == 1)
@@ -35,13 +36,15 @@
         {
             <div class="alert alert-warning">
                 <strong>You have @recoveryCodesLeft recovery codes left.</strong>
-                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.
+                </p>
             </div>
         }
 
         if (isMachineRemembered)
         {
-            <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync" method="post">
+            <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync"
+                  method="post">
                 <AntiforgeryToken/>
                 <button type="submit" class="btn btn-primary">Forget this browser</button>
             </form>
