--- a/Components/App.razor
+++ b/Components/App.razor
@@ -15,6 +15,7 @@
 
 <body>
 <Routes/>
+<script src="js/clipboard.js"></script>
 <script src="_framework/blazor.web.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
