--- a/Components/Urls/SuccessResult.razor
+++ b/Components/Urls/SuccessResult.razor
@@ -4,7 +4,6 @@
 @using System.Text.Encodings.Web
 @using UrlSamurai.Components.Services
 @using UrlSamurai.Data.Entities
-@inject IJSRuntime Js
 @inject QrCodeService QrService
 
 <div>
@@ -14,7 +13,7 @@
             <span class="me-2">@_formattedUrl</span>
             <button type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    @onclick="CopyLink"
+                    onclick="navigator.clipboard.writeText('@_formattedUrl')"
             >
                 Copy
             </button>
@@ -37,11 +36,5 @@
             _formattedUrl = string.Format(CultureInfo.InvariantCulture, "https://www.sshare.dev/u/{0}", UrlEncoder.Default.Encode(GeneratedUrl.ShortId));
             _base64Qr = QrService.GenerateBase64(_formattedUrl);
         }
-    }
-    
-    private async Task CopyLink()
-    {
-        Console.WriteLine($"Copying url: {_formattedUrl}");
-        await Js.InvokeVoidAsync("copyText", _formattedUrl);
     }
 }
