--- a/Components/Pages/UrlsList.razor
+++ b/Components/Pages/UrlsList.razor
@@ -131,6 +131,6 @@ else
 
     private string ParseUrl(string shortId)
     {
-        return $"https://www.sshare.dev/u/{UrlEncoder.Default.Encode(shortId)}";
+        return $"https://www.twik.cc/u/{UrlEncoder.Default.Encode(shortId)}";
     }
 }
