--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -10,8 +10,6 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject RedisCacheService Redis
 
-<PageTitle>Home</PageTitle>
-
 <div class="card" style="padding-right: 0; padding-left: 0;">
     <h5 class="card-header">URL Samurai ⚔️</h5>
     <div class="card-body">
@@ -37,7 +35,7 @@
 <div class="card mt-5" style="padding-right: 0; padding-left: 0;">
     <div class="card-header">What is it?</div>
     <div class="card-body">
-        <h5 class="card-title">Sshare.dev – Simple, Fast, Free URL Shortener</h5>
+        <h5 class="card-title">Simple, Fast, Free URL Shortener</h5>
         <p class="card-text d-flex flex-wrap gap-2">
             <a href="https://t.me/UrlShortenerNinjaBot" target="_blank" class="badge rounded-pill bg-primary text-decoration-none">
                 Available as Telegram bot
@@ -48,7 +46,7 @@
         </p>
         
         <p class="card-text">
-            Sshare.dev is a minimalistic, privacy-friendly URL shortener. Just paste a long link and get a short one instantly – no ads, no tracking (except if you would like so).
+            This is a minimalistic, privacy-friendly URL shortener. Just paste a long link and get a short one instantly – no ads, no tracking (except if you would like so).
         </p>
         <p class="card-text">
             It's ideal for quick sharing, messaging, or QR code generation. All links are automatically shortened and stored with unique short IDs.
