--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -3,7 +3,10 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">UrlSamurai</a>
+        <a class="navbar-brand d-flex align-items-center gap-2" href="/">
+            <img src="/logo.png" alt="Logo" width="24" height="24">
+            URL Shortener. Free. Fast.
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
