--- a/Components/App.razor
+++ b/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/"/>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     
     <link rel="stylesheet" href="app.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
@@ -16,6 +17,7 @@
 <body>
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
+<script src="js/collapse.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 
